[gd_scene load_steps=16 format=3 uid="uid://cyeeki23p34lp"]

[ext_resource type="Script" path="res://Scenes/Mission/MissionScene.gd" id="1_mwj7f"]
[ext_resource type="PackedScene" uid="uid://hqji3px5w272" path="res://Assets/Ships/Hornet.tscn" id="2_2ps62"]
[ext_resource type="World3D" uid="uid://buykx4nk5tqdb" path="res://Scenes/World3D.tres" id="2_o2a2u"]
[ext_resource type="Script" path="res://Scenes/Mission/PlayerController.gd" id="2_urwft"]
[ext_resource type="PackedScene" uid="uid://lk7a2haj36he" path="res://Scenes/Mission/Starfield.tscn" id="2_wnr33"]
[ext_resource type="PackedScene" uid="uid://clle2yu5u1sqv" path="res://Assets/Cockpits/ShipV00.tscn" id="3_565ps"]
[ext_resource type="Resource" uid="uid://bsvigcsri36cg" path="res://Assets/Ships/ShipV00.tres" id="3_knc2j"]
[ext_resource type="ArrayMesh" uid="uid://dvklbg13ci8q6" path="res://Assets/Ships/Dralthi.vox" id="4_7rd8r"]
[ext_resource type="Script" path="res://Scenes/Mission/PlayerCamera.gd" id="5_iqnf7"]
[ext_resource type="ArrayMesh" uid="uid://voq18j7v7iv" path="res://Assets/Ships/Salthi.vox" id="5_vtyh5"]
[ext_resource type="ArrayMesh" uid="uid://danpfdpq34xej" path="res://Assets/Ships/Hornet.vox" id="6_i5g8o"]
[ext_resource type="Script" path="res://Scripts/Mission/NavPoint.gd" id="9_u0url"]

[sub_resource type="Environment" id="Environment_wkg3h"]
background_color = Color(0, 0, 0.0823529, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 0.980392, 0.835294, 1)
ambient_light_energy = 0.5

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_stalb"]

[sub_resource type="SphereShape3D" id="SphereShape3D_mi2fd"]
radius = 15000.0

[node name="MissionScene" type="Node2D"]
script = ExtResource("1_mwj7f")

[node name="StarfieldViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 1280.0
offset_bottom = 800.0
stretch = true

[node name="StarfieldViewport" type="SubViewport" parent="StarfieldViewportContainer"]
own_world_3d = true
world_3d = ExtResource("2_o2a2u")
handle_input_locally = false
size = Vector2i(1280, 800)
render_target_update_mode = 4

[node name="Starfield" parent="StarfieldViewportContainer/StarfieldViewport" instance=ExtResource("2_wnr33")]

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1280, 800)
render_target_update_mode = 4

[node name="LightAnchor" type="Node3D" parent="SubViewportContainer/SubViewport"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport/LightAnchor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -100000)
light_color = Color(1, 0.980392, 0.835294, 1)
light_energy = 160.0
light_indirect_energy = 16.0
light_volumetric_fog_energy = 14.36
light_bake_mode = 0

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport"]
environment = SubResource("Environment_wkg3h")
camera_attributes = SubResource("CameraAttributesPractical_stalb")

[node name="Ship" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_2ps62")]
visible = false
ship_properties = ExtResource("3_knc2j")

[node name="PlayerController" type="Node3D" parent="SubViewportContainer/SubViewport/Ship"]
script = ExtResource("2_urwft")

[node name="PlayerCamera" type="Camera3D" parent="SubViewportContainer/SubViewport/Ship"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
rotation_order = 0
fov = 60.0
script = ExtResource("5_iqnf7")

[node name="Enemies" type="Node" parent="SubViewportContainer/SubViewport"]

[node name="Dralthi" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Enemies"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -75.5829, 4.76837e-07, 0.139225)
mesh = ExtResource("4_7rd8r")
skeleton = NodePath("../../..")

[node name="Salthi" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Enemies"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.497811, 7.17911, 58.285)
mesh = ExtResource("5_vtyh5")
skeleton = NodePath("../../..")

[node name="NavPoints" type="Node" parent="SubViewportContainer/SubViewport"]

[node name="NavPoint1" type="Area3D" parent="SubViewportContainer/SubViewport/NavPoints"]
script = ExtResource("9_u0url")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/NavPoints/NavPoint1"]
shape = SubResource("SphereShape3D_mi2fd")

[node name="AsteroidFields" type="Node" parent="SubViewportContainer/SubViewport"]

[node name="Friends" type="Node" parent="SubViewportContainer/SubViewport"]

[node name="Hornet" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Friends"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.530968, 17.8811, -84.7203)
mesh = ExtResource("6_i5g8o")
skeleton = NodePath("../../..")

[node name="CockpitOverlay" parent="." instance=ExtResource("3_565ps")]
